Details
-
Bug
-
Resolution: Done
-
P2: Important
-
4.5.0
-
None
-
cc1d15dc46ecdc661e9eb96e0a6c2bd3832d5c83
Description
There's a potential memory leak in QFontCache::insertEngine. If an engine is inserted with the same key as an existing one, the reference to the existing one is lost without an update to the reference count.
Attachments
Issue Links
- replaces
-
QTBUG-9552 memory leak when use QTextDocument in the thread
-
- Closed
-
-
QTBUG-9562 QTextDocument: suffers from memory leak in drawContents() when there is no layout set on the document
-
- Closed
-
-
QTBUG-11637 Why each thread will load their fontconfig, why not process related fonts library!!!
-
- Closed
-
-
QTBUG-3111 Memory leak when using font rendering in different threads and destroying the threads
-
- Closed
-