Fixed a QFontEngine leak for QFont objects used in threads.

Only the QFontCache object for the main thread was cleared when the
the application exited, or a thread was destroyed. This caused font
engine references to hang around and never get deleted.

Task-number: QTBUG-3976
Reviewed-by: Brad